# tui-meshcore

./: README.md  bootstrap-prompt.md  pyproject.toml
src/tui_meshcore/: __init__.py  app.py  app.tcss  config.py  database.py  identity.py  mesh_service.py  mock_radio.py
src/tui_meshcore/screens/: dialogs.py  main_screen.py  onboarding.py
src/tui_meshcore/widgets/: message_list.py  sidebar.py
